kustomize/ml-talk/ml-talk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-talk-philiplehmann
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-talk-philiplehmann
  template:
    metadata:
      labels:
        app: ml-talk-philiplehmann
    spec:
      imagePullSecrets:
        - name: docker-registry-harbor
      containers:
        - name: ml-talk-philiplehmann
          imagePullPolicy: IfNotPresent
          image: harbor.riwi.dev/philiplehmann/ml-talk:latest
          ports:
            - containerPort: 3000
      restartPolicy: Always
