kustomize/ml-talk/ml-talk-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mltalk-philiplehmann
spec:
  selector:
    app: mltalk-philiplehmann
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
