kustomize/ml-talk/ml-talk-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ml-talk-philiplehmann
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: ml-talk.philiplehmann.ch
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: ml-talk-philiplehmann-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ml-talk-philiplehmann
spec:
  parentRefs:
  - name: ml-talk-philiplehmann
  hostnames:
  - ml-talk.philiplehmann.ch
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ml-talk-philiplehmann
      port: 8080
