kustomize/ml-talk/ml-talk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mltalk-philiplehmann
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  rules:
  - host: ml-talk.philiplehmann.ch
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mltalk-philiplehmann
            port:
              number: 3000
  tls:
  - hosts:
    - ml-talk.philiplehmann.ch
    secretName: mltalk-philiplehmann-cert
